[package]
name = "where-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
chrono = "0.4"
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
once_cell = "1.12.0"
regex = "1"

[build-dependencies]
lalrpop = { version = "0.19.8", features = ["lexer"] }
